screen boundary overflow issue fixed

--- a/calculator/public/assets/style.css
+++ b/calculator/public/assets/style.css
@@ -26,7 +26,7 @@
 }
 
 #screen {
-  width: 380px;
+  max-width: 380px;
   border: 10px solid black;
   border-bottom: 7px solid black;
   margin: auto;
